syntax = "proto3";

package events_service;

option go_package = "github.com/sleeps17/events-planning-service-backend/events_service;eventsv1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Events {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc GetByID(GetRequest) returns (GetResponse);
  rpc GetAllBetweenTwoDates(GetAllBetweenTwoDatesRequest) returns (GetAllBetweenTwoDatesResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message Room {
  uint32 id = 1;
  string name = 2;
  uint32 capacity = 3;
}

message Employee {
  uint64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string patronymic = 4;
  string email = 5;
  string mobile_number = 6;
}

message Event {
  uint64 id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp start_date = 4;
  google.protobuf.Timestamp end_date = 5;
  Room room = 6;
  Employee creator = 7;
  repeated Employee participants = 8;
}

message CreateRequest {
  Event event = 1;
}

message CreateResponse {
  uint64 id = 1;
}

message GetRequest {
  uint64 id = 1;
}

message GetResponse {
  Event event = 1;
}

message GetAllBetweenTwoDatesRequest {
  google.protobuf.Timestamp start_date = 1;
  google.protobuf.Timestamp end_date = 2;
}

message GetAllBetweenTwoDatesResponse {
  repeated Event events = 1;
}

message UpdateRequest {
  uint64 id = 1;
  Event updated_event = 2;
}

message UpdateResponse {
  Event updated_event = 1;
}

message DeleteRequest {
  uint64 id = 1;
}